--- a/src/components/FooterDescription/FooterDescription.module.scss
+++ b/src/components/FooterDescription/FooterDescription.module.scss
@@ -79,6 +79,13 @@
                     }
                 }
             }
+
+            a:nth-of-type(1),
+            a:nth-of-type(2) {
+                i {
+                    font-size: 1.05rem;
+                }
+            }
         }
     }
 }
