--- a/src/components/FooterDescription/_media.scss
+++ b/src/components/FooterDescription/_media.scss
@@ -1,5 +1,5 @@
 // Media query for mobile content (portrait)
-@media screen and (max-width: 500px) and (min-height: 501px) {
+@media screen and (max-width: 500px) and (min-height: 501px) and (min-width: 250px) {
 
     // Footer content
     .footer_container {
@@ -39,6 +39,13 @@
                         }
                     }
                 }
+
+                a:nth-of-type(1),
+                a:nth-of-type(2) {
+                    i {
+                        font-size: .8rem;
+                    }
+                }
             }
         }
     }
@@ -46,7 +53,8 @@
 
 
 // Media query for small screens (mobile)
-@media screen and (max-width: 500px) and (max-height: 500px) {
+@media screen and (max-width: 500px) and (max-height: 500px),
+screen and (min-width: 200px) and (max-width: 250px) and (min-height: 501px) {
 
     // Footer content
     .footer_container {
@@ -85,6 +93,13 @@
                             color: var(--extra-menu-icon-color);
                             translate: 0 0;
                         }
+                    }
+                }
+
+                a:nth-of-type(1),
+                a:nth-of-type(2) {
+                    i {
+                        font-size: .65rem;
                     }
                 }
             }
@@ -135,6 +150,13 @@
                         }
                     }
                 }
+
+                a:nth-of-type(1),
+                a:nth-of-type(2) {
+                    i {
+                        font-size: .625rem;
+                    }
+                }
             }
         }
     }
@@ -182,6 +204,13 @@
                         }
                     }
                 }
+
+                a:nth-of-type(1),
+                a:nth-of-type(2) {
+                    i {
+                        font-size: .8rem;
+                    }
+                }
             }
         }
     }
@@ -227,6 +256,13 @@
                             color: var(--extra-menu-icon-color);
                             translate: 0 0;
                         }
+                    }
+                }
+
+                a:nth-of-type(1),
+                a:nth-of-type(2) {
+                    i {
+                        font-size: .8rem;
                     }
                 }
             }
