--- a/src/components/HelpPopUp/_media.scss
+++ b/src/components/HelpPopUp/_media.scss
@@ -1,5 +1,5 @@
 // Media query for mobile content (portrait low height)
-@media screen and (max-width: 500px) and (min-height: 501px) {
+@media screen and (max-width: 500px) and (min-height: 501px) and (min-width: 250px) {
 
     // Help Pop Up content
     .help_popup_container {
@@ -158,7 +158,8 @@
 
 
 // Media query for small screens (mobile)
-@media screen and (max-width: 500px) and (max-height: 500px) {
+@media screen and (max-width: 500px) and (max-height: 500px),
+screen and (min-width: 200px) and (max-width: 250px) and (min-height: 501px) {
 
     // Help Pop Up content
     .help_popup_container {
