--- a/src/components/Navbar/_media.scss
+++ b/src/components/Navbar/_media.scss
@@ -1,5 +1,5 @@
 // Media query for mobile content (portrait)
-@media screen and (max-width: 500px) and (min-height: 501px) {
+@media screen and (max-width: 500px) and (min-height: 501px) and (min-width: 250px) {
 
     // Navbar content
     .navbar_container {
@@ -30,7 +30,8 @@
 
 
 // Media query for small screens (mobile)
-@media screen and (max-width: 500px) and (max-height: 500px) {
+@media screen and (max-width: 500px) and (max-height: 500px),
+screen and (min-width: 200px) and (max-width: 250px) and (min-height: 501px) {
 
     // Navbar content
     .navbar_container {
