--- a/src/components/SettingsPopUp/_media.scss
+++ b/src/components/SettingsPopUp/_media.scss
@@ -1,5 +1,5 @@
 // Media query for mobile content (portrait low height)
-@media screen and (max-width: 500px) and (min-height: 501px) {
+@media screen and (max-width: 500px) and (min-height: 501px) and (min-width: 250px) {
 
     // Settings Pop Up content
     .settings_popup_container {
@@ -217,7 +217,8 @@
 
 
 // Media query for small screens (mobile)
-@media screen and (max-width: 500px) and (max-height: 500px) {
+@media screen and (max-width: 500px) and (max-height: 500px),
+screen and (min-width: 200px) and (max-width: 250px) and (min-height: 501px) {
 
     // Settings Pop Up content
     .settings_popup_container {
